--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 
   "dependencies": {
     "hubot": "2.1.3",
+    "hubot-irc": "0.0.6",
     "hubot-scripts": ">=2.0.4",
     "optparse": "1.0.3"
   }
